@@ -15,17 +15,22 @@ REM  https://www.gnu.org/software/classpath/license.html.
 REM
 REM  SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
 REM
+
 VERIFY OTHER 2>nul
 setlocal ENABLEEXTENSIONS
 if ERRORLEVEL 0 goto ok
 echo "Unable to enable extensions"
 exit /B 1
+
 :ok
 call "%~dp0..\config\asenv.bat"
 if "%AS_JAVA%x" == "x" goto UsePath
 set JAVA="%AS_JAVA%\bin\java"
 goto run
+
 :UsePath
 set JAVA=java
+
 :run
-%JAVA% "-Djava.util.logging.manager=org.glassfish.main.jul.GlassFishLogManager" -jar "%AS_INSTALL%\modules\admin-cli.jar" %*
+set ASADMIN_CLASSPATH="%AS_INSTALL%/admin-cli.jar:%AS_INSTALL%/modules/*"
+%JAVA% "%ASADMIN_JVM_OPTIONS%" --module-path "%ASADMIN_MODULEPATH%" --add-modules ALL-MODULE-PATH -cp "%ASADMIN_CLASSPATH%" com.sun.enterprise.admin.cli.AdminMain %*
